--- a/css/css-styles.css
+++ b/css/css-styles.css
@@ -317,7 +317,7 @@ select {
 	-ms-appearance: none;
     -o-appearance: none;
     appearance: none;
-    background-image: url('../images/down-arrow.png');
+    background-image: url('../images/images-down-arrow.png');
     background-position: 96% 50%;
     background-repeat: no-repeat;
     outline: none;
@@ -629,7 +629,7 @@ input[type='checkbox'] {
 .header {
 	padding-top: 8rem;
 	padding-bottom: 7.75rem;
-	background: linear-gradient(#262431, #ffffff);
+	background: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url('../images/images-header-background.jpg') center center no-repeat;
 	background-size: cover;
 	text-align: center;
 }
@@ -844,7 +844,7 @@ input[type='checkbox'] {
 .basic-1 {
 	padding-top: 7.5rem;
 	padding-bottom: 8rem;
-	background: url('../images/video-background.jpg') center center no-repeat;
+	background: url('../images/images-video-background.jpg') center center no-repeat;
 	background-size: cover; 
 }
 
@@ -1192,7 +1192,7 @@ input[type='checkbox'] {
 .basic-4 {
 	padding-top: 7.75rem;
 	padding-bottom: 8.125rem;
-	background: url('../images/download-background.jpg') center center no-repeat;
+	background: url('../images/images-download-background.jpg') center center no-repeat;
 	background-size: cover; 
 }
 
@@ -1296,7 +1296,7 @@ a.back-to-top {
 	width: 2.625rem;
 	height: 2.625rem;
 	border-radius: 1.875rem;
-	background: #5557da url("../images/up-arrow.png") no-repeat center 47%;
+	background: #5557da url("../images/images-up-arrow.png") no-repeat center 47%;
 	background-size: 1.125rem 1.125rem;
 	text-indent: -9999px;
 }
@@ -1744,7 +1744,7 @@ a:hover.back-to-top {
 	}
 
 	.p-heading {
-		width: 34rem;
+		width: 35rem;
 		margin-right: auto;
 		margin-left: auto;
 	}
@@ -1754,14 +1754,14 @@ a:hover.back-to-top {
 	/* Navigation */
 	.navbar {
 		padding-top: 1.75rem;
-		background-color: transparent;
+		background-color: #4e4ccba1;
 		box-shadow: none;
 		transition: all 0.2s;
 	}
 
 	.navbar.top-nav-collapse {
 		padding-top: 0.5rem;
-		background-color: #262431;
+		background-color: #63589a;
 		box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.3);
 	}
 
