--- a/css/css-styles.css
+++ b/css/css-styles.css
@@ -1097,9 +1097,9 @@ input[type='checkbox'] {
 /*     Statistics     */
 /**********************/
 .counter {
-	padding-top: 4rem;
+	/*padding-top: 4rem;*/
 	padding-bottom: 3.25rem;
-	background-color: #262431;
+	/*background-color: #262431;*/
 	text-align: center;
 }
 
@@ -1109,10 +1109,10 @@ input[type='checkbox'] {
 
 .counter #counter .cell {
 	display: inline-block;
-	width: 7.375rem;
-	margin-right: 1.5rem;
-	margin-bottom: 4rem;
-	margin-left: 1.5rem;
+	/*width: 7.375rem;*/
+	/*margin-right: 1.5rem;*/
+	/*margin-bottom: 4rem;*/
+	/*margin-left: 1.5rem;*/
 	vertical-align: top;
 }
 
@@ -1817,6 +1817,13 @@ a:hover.back-to-top {
 		margin-right: 0;
 		margin-left: 0.25rem;
 	}
+
+	.navbar-button {
+		border-radius: 0;
+		border: none;
+		background: none;
+		font: 400 1rem/1.75rem "Open Sans", sans-serif;
+	}
 	/* end of navigation */
 	
 	
@@ -2131,8 +2138,8 @@ a:hover.back-to-top {
 
 	/* Statistics */
 	.counter #counter .cell {
-		margin-right: 2.75rem;
-		margin-left: 2.75rem;
+		/*margin-right: 2.75rem;*/
+		/*margin-left: 2.75rem;*/
 	}
 
 	.counter #counter .fas {
@@ -2199,3 +2206,11 @@ a:hover.back-to-top {
 	/* end of extra pages */
 }
 /* end of min-width 1200px */
+
+.large-icon {
+	font-size: 4rem;
+}
+
+.align-center {
+	text-align: center;
+}
